--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>The Argo</title>
+    <title>The yellow submarine</title>
   </head>
   <body>
   </body>
